--- a/layout/_partial/head.ejs
+++ b/layout/_partial/head.ejs
@@ -47,7 +47,6 @@
   <!-- CSS -->
   <link rel="stylesheet" href="<%- config.root %>css/themes/<%- theme.theme %>.css" media="screen" type="text/css">
   <link rel="stylesheet" href="<%- config.root %>css/font-awesome.css" media="screen" type="text/css">
-  <link rel="stylesheet" href="<%- config.root %>css/style.css" media="screen" type="text/css">
   <link rel="stylesheet" href="<%- config.root %>css/responsive.css" media="screen" type="text/css">
   <link rel="stylesheet" href="<%- config.root %>css/highlight.css" media="screen" type="text/css">
   <link rel="stylesheet" href="<%- config.root %>css/highlight-default.min.css" media="screen" type="text/css">
@@ -58,8 +57,10 @@
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/es5-shim/4.5.9/es5-shim.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/es5-shim/4.5.7/es5-sham.min.js"></script>
   <![endif]-->
+  <link rel="stylesheet/less" type="text/css" href="<%- config.root %>css/style.css" media="screen" />
+  <script src="//cdnjs.cloudflare.com/ajax/libs/less.js/3.8.1/less.min.js" ></script>
+  <!-- <script type="text/javascript" src="<%- config.root %>js/less.js"></script> -->
 
-  <script src="<%- config.root %>js/jquery-2.0.3.min.js"></script>
   <% if (theme.comment_js) { %>
     <script src="<%- config.root %>js/marked.js"></script>
     <script src="<%- config.root %>js/comment.js"></script>
