--- a/source/css/style.css
+++ b/source/css/style.css
@@ -1,3 +1,12 @@
+/* less */
+@color-1: rgb(57,120,163);
+@color-2: rgb(65,134,167);
+@color-3: rgb(18,32,43);
+@color-4: rgb(237,226,100);
+@color-5: rgb(234,234,193);
+@color-6: rgb(126,170,109);
+@color-7: rgb(238,232,162);
+
 /* =============================================================================
    container
    ========================================================================== */
@@ -26,13 +35,20 @@
 body {
   position: relative;
   padding-top: 40px;
-  background-color: #fff;
-  background-image: url(../img/grid-18px-masked.png);
-  background-repeat: repeat-x;
+  background-color: #FFFFCC;
+  /* background-image: url(../img/bg.png); */
+  background-repeat: repeat-y;
   background-position: 0 40px;
   padding-bottom: 70px;
 }
-
+.navbar-inverse, .navbar-brand{
+  background-color: @color-2;
+  border-color: @color-7;
+  color: @color-7;
+}
+.navbar-inverse .navbar-nav > li > a, .navbar-inverse .navbar-brand{
+  color: @color-7;     
+}
 .content {
   padding: 20px;
   margin-left: -20px; /* negative indent the amount of the padding to maintain the grid system */
@@ -43,6 +59,8 @@ body {
   -webkit-box-shadow: 0 2px 10px rgba(0,0,0,.75);
   -moz-box-shadow: 0 2px 102px rgba(0,0,0,.75);
   box-shadow: 0 2px 10px rgba(0,0,0,.75);
+  background-color: rgba(255,255,255,.75);
+  color: @color-3
 }
 
 #sidebar {
@@ -67,7 +85,14 @@ a {
 
 .page, .post{
   line-height: 1.5em;
-  font-family: 'Open Sans',"Helvetica Neue", "Helvetica","Microsoft YaHei", "WenQuanYi Micro Hei",Arial, sans-serif;
+  font-family: "Lucida Grande", "Lucida Sans Unicode", "Helvetica", 'Open Sans',"Helvetica Neue", "Helvetica","Microsoft YaHei", "WenQuanYi Micro Hei",Arial, sans-serif;
+}
+
+.page-header-inverse{
+  background-image: -webkit-linear-gradient(@color-1, @color-2	 60%, @color-3);
+  background-image: -o-linear-gradient(@color-1, @color-2	 60%, @color-3);
+  background-image: linear-gradient(@color-1, @color-2	 60%, @color-3);
+  background-repeat: repeat-y;
 }
 
 .post .date {
@@ -173,7 +198,7 @@ li i {
 
 .widget {
   padding-bottom: 25px;
-  border-bottom: 1px solid #e0e0e0; 
+  border-bottom: 1px solid @color-5; 
 }
 
 #local-search-result {
@@ -191,11 +216,11 @@ a.search-result-title {
 }
 
 p.search-result {
-  color=#555;
+  color: #555;
 }
 
 em.search-keyword {
-  border-bottom: 1px dashed #4088b8;
+  border-bottom: 1px dashed @color-6;
   font-weight: bold;
 }
 
@@ -231,7 +256,7 @@ a.label-anchor {
   font-family: 'PT Sans', sans-serif;
 }
 a.label-anchor:target span {
-  background-color: #b94a48;
+  background-color: @color-4;
 }
 a.label-anchor:hover {
   text-decoration: none;
@@ -239,10 +264,10 @@ a.label-anchor:hover {
 a.label-anchor span {
   font-weight: bold;
   line-height: 0px;
-  color: #ffffff;
+  color: @color-5;
   text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
   white-space: nowrap;
-  background-color: #666;
+  background-color: @color-3;
   padding: 1px 4px 2px;
   -webkit-border-radius: 3px;
   -moz-border-radius: 3px;
@@ -263,7 +288,8 @@ a.inline-ref:hover {
    ========================================================================== */
 
 blockquote p, blockquote ol, blockquote ul, blockquote li, .slogan{
-  font-family: 'Open Sans',"Helvetica Neue", Helvetica, "Segoe UI", Ubuntu, "Hiragino Sans GB", '楷体', 'STKaiti';
+  /* font-family: 'Open Sans',"Helvetica Neue", Helvetica, "Segoe UI", Ubuntu, "Hiragino Sans GB", '楷体', 'STKaiti'; */
+  font-family: "Lucida Grande", "Lucida Sans Unicode", "Helvetica", 'Open Sans',"Helvetica Neue", "Helvetica","Microsoft YaHei", "WenQuanYi Micro Hei",Arial;
 }
 
 /* =============================================================================
@@ -340,7 +366,9 @@ h1{
 h1,h2,h3,h4,h5,h6{
   text-rendering:optimizelegibility;
   font-weight:bold;
-  font-family: 'Open Sans', "Helvetica Neue", "Helvetica","Microsoft YaHei", "WenQuanYi Micro Hei",Arial, sans-serif;
+  /* font-family: 'Open Sans', "Helvetica Neue", "Helvetica","Microsoft YaHei", "WenQuanYi Micro Hei",Arial, sans-serif; */
+
+  font-family: "Lucida Grande", "Lucida Sans Unicode", "Helvetica", 'Open Sans',"Helvetica Neue", "Helvetica","Microsoft YaHei", "WenQuanYi Micro Hei",Arial, 
 }
 
 h2{
@@ -406,11 +434,13 @@ h4 {
   padding: 2px 5px 5px 5px;
   font-size: 1.9em;
   font-weight: normal;
-  font-family: 'PT Sans Narrow', '雅黑', '文泉驿微米黑', '黑体', sans-serif;
+  /* font-family: 'PT Sans Narrow', '雅黑', '文泉驿微米黑', '黑体', sans-serif; */
+
+  font-family: "Lucida Grande", "Lucida Sans Unicode", "Helvetica", 'Open Sans',"Helvetica Neue", "Helvetica","Microsoft YaHei", "WenQuanYi Micro Hei",Arial;  background-color: @color-7;
 }
 
 .page h3.title a, .page h3.title-top a {
-  color: black;
+  color: @color-1;
 }
 
 .page h3.title div.article-title, .page h3.title-top div-article-title {
